[project]

name = "modernbert-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "uvicorn>=0.34.2",
]
